--- a/assignment1/assignment2.css
+++ b/assignment1/assignment2.css
@@ -43,7 +43,7 @@ h2{
 
 .right{
     margin-top: 20px;
-    margin-left: 20px;
+    margin-right: 20px;
     background-color:aliceblue;
     border-right:15px solid #a3080c;
     opacity:0.8;
