--- a/assignment1/assignment2.css
+++ b/assignment1/assignment2.css
@@ -9,7 +9,6 @@
     font-size: 60px;
     margin: 0 auto;
     padding:20px;
-    text-align: center;
     }
 
 h2{
@@ -52,3 +51,42 @@ h2{
     border-radius: 0.8%;
     grid-area: right-side;
 }
+
+.navigation_bar{
+    padding:0;
+    margin:0;
+    list-style: none;
+    width:800px;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    text-align: center;
+}  
+
+
+.navigation_bar li{
+    text-align: center;
+    width: 30%;
+    height: 40px;
+    margin: 5px 3px;
+    line-height: 40px;
+    cursor: pointer;
+    position: relative;
+    border-radius: 10px;
+}
+   
+.navigation_bar li a {
+    color:#a3080c;
+    display: inline-block;
+    /* width:50px; */
+    text-decoration: none;
+    font-family: myfont;
+    font-size:18px;
+    opacity:0.8;
+   
+}
+
+.navigation_bar li a:hover{
+    background-color:#a3080c;
+    color: white;
+} 
